--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ extend-exclude = [".scratch"]
 quote-style = "double"
 indent-style = "space"
 line-ending = "auto"
+docstring-code-format = true
 
 [tool.ruff.lint]
 
@@ -64,10 +65,7 @@ select = [
 fixable = ["ALL"]
 
 
-[tool.ruff.lint.pydocstyle]
-convention = "google"
-
 [tool.mypy]
-python_version = "3.12"
+python_version = "3.13"
 warn_return_any = true
 disallow_untyped_defs = true
